changed gorm to sqlc
